<resources>
    <string name="app_name">主页</string>

    <array name="test_sp">
        <item>日常111</item>
        <item>日常2222</item>
    </array>
    <string name="test">test2</string>
    <string name="detail">详情</string>
    <string name="remark">备注</string>
    <string name="time">时间</string>
    <string name="modify">修改</string>
    <string name="add">添加</string>
    <string name="everyday">日常</string>
    <string name="business">生意</string>
    <string name="human_feeling">人情</string>
    <string name="investment">投资</string>
    <string name="fitment">装修</string>
    <string name="campus">校园</string>
    <string name="travel">旅行</string>
    <string name="select_billing_template">选择记账模板</string>
    <string name="save">保存</string>
    <string name="tally_book">记账本</string>
    <string name="save_succ">保存成功</string>
    <string name="manager">管理</string>
    <string name="modify_book">修改账本</string>
    <string name="book_name">账本名称</string>
    <string name="delete">删除</string>
    <string name="least_one_ledger">至少有一个账本</string>
    <string name="add_category">添加分类</string>
    <string name="select_icon_err">请选择类型图片</string>
    <string name="please_input_name">请输入名称</string>
</resources>