<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="accountBook"
            type="com.geyu.database.ben.AccountBook" />

        <variable
            name="view"
            type="com.geyu.home.ui.contract.Home_AccountBookEditContract.View" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/page_background_color">

        <com.geyu.view.TopBar
            android:id="@+id/top_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/modify_book">

            <TextView
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="end|center_vertical"
                android:gravity="end|center_vertical"
                android:layout_marginRight="@dimen/dp_15"
                android:onClick="@{() -> view.save(accountBook)}"
                android:text="@string/save"/>
        </com.geyu.view.TopBar>
        <TextView
            style="@style/text_size_small"
            android:textColor="@color/appTextColorThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_name"
            />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:text="@={accountBook.accountBookName}"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_48"
            android:layout_marginTop="@dimen/dp_35"
            android:layout_marginRight="@dimen/dp_15"
            android:layout_marginLeft="@dimen/dp_15"
            android:onClick="@{() -> view.delete(accountBook)}"
            android:text="@string/delete"/>
    </LinearLayout>
</layout>