<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="view"
            type="com.geyu.home.ui.contract.Home_RecordDetailContract.View" />
        <variable
            name="itemData"
            type="com.geyu.database.ben.Record" />

        <import type="com.geyu.database.ben.CategoryModel"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/page_background_color">
        <com.geyu.view.TopBar
            android:id="@+id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:text="@string/detail"
            app:layout_constraintTop_toTopOf="parent"
            android:background="@color/white">

            <FrameLayout
                android:layout_width="@dimen/dp_40"
                android:layout_height="@dimen/dp_40"
                android:layout_gravity="end|center_vertical"
                android:onClick="@{() -> view.delete(itemData)}">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/home_ic_delete"
                    android:layout_gravity="center"/>
            </FrameLayout>
        </com.geyu.view.TopBar>

        <LinearLayout
            app:layout_constraintTop_toBottomOf="@id/topbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:orientation="vertical">
            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_top"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/top_bar"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15">

                <FrameLayout
                    android:id="@+id/category_iv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:background="@{itemData.type == CategoryModel.TYPE_EXPENSE ? @drawable/bg_category_expense : @drawable/bg_category_income}"
                    selected="@{true}">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/dp_5"
                        categoryIcon="@{itemData.categoryIcon}"
                        tools:src="@mipmap/ic_launcher"/>
                </FrameLayout>
                <TextView
                    style="@style/text_big_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toRightOf="@id/category_iv"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    android:layout_marginLeft="@dimen/dp_10"
                    android:text="@{itemData.categoryName}"
                    tools:text="其他"
                    android:layout_marginStart="@dimen/dp_10" />

                <TextView
                    style="@style/text_big_title"
                    android:id="@+id/tv_amount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                   setAmount="@{itemData.amount}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15">
                <TextView
                    style="@style/text_medium_label"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/remark"/>

                <TextView
                    style="@style/text_medium_label"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{itemData.desc}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingLeft="@dimen/dp_15"
                android:paddingRight="@dimen/dp_15">
                <TextView
                    style="@style/text_medium_label"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:layout_marginTop="@dimen/dp_15"
                    android:layout_marginBottom="@dimen/dp_15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/time"/>

                <TextView
                    style="@style/text_medium_label"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    setTime="@{itemData.time}"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <com.geyu.view.ShadowLayoutView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:shadow_shadowLimit="@dimen/dp_4"
            app:shadow_shadowBackColor="@color/white"
            app:shadow_shadowColor="@color/gray_e9"
            app:shadow_rightShow="false"
            app:shadow_leftShow="false"
            app:shadow_topShow="true"
            app:shadow_bottomShow="false">
            <TextView
                android:id="@+id/btnModify"
                style="@style/text_big_title"
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:clickable="true"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:text="@string/modify"
                android:textStyle="bold"
                android:onClick="@{() -> view.modification(itemData)}"
                app:layout_constraintBottom_toBottomOf="parent" />

        </com.geyu.view.ShadowLayoutView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>